--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    background: url('background.jpg') no-repeat center center/cover; /* Background Image */
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -22,7 +22,7 @@ body {
 }
 
 .container {
-    background: white;
+    background: rgba(255, 255, 255, 0.9); /* Transparent White Background */
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -62,12 +62,15 @@ a:hover {
     align-items: center;
     gap: 10px;
     font-size: 16px;
-    color: #333;
+    color: white;
     font-weight: bold;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 10px 20px;
+    border-radius: 10px;
 }
 
 .footer img {
-    width: 30px;  /* Adjust size as needed */
+    width: 30px;
     height: 30px;
     border-radius: 50%;
 }
