--- a/quiz4.html
+++ b/quiz4.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: rgba(255, 255, 255, 0.9);
+            background: url('background.jpg') no-repeat center center/cover;
             text-align: center;
             margin: 0;
             padding: 20px;
