--- a/quiz6.html
+++ b/quiz6.html
@@ -93,7 +93,7 @@
 
     <div class="quiz-container">
         <div id="result-container"></div>  <!-- रिजल्ट ऊपर दिखाने के लिए -->
-        <h2>Science Quiz</h2>
+        <h2>Social Science Quiz</h2>
         <div id="quiz"></div>
         <button id="startBtn" class="btn">क्विज शुरू करें</button>
         <button id="prevBtn" class="btn" style="display: none;">पिछला प्रश्न</button>
