--- a/quiz5.html
+++ b/quiz5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Structure Of Atom Quiz</title>
+    <title>Maths Quiz</title>
     <style>
         /* Responsive Background */
         body {
@@ -93,7 +93,7 @@
 
     <div class="quiz-container">
         <div id="result-container"></div>  <!-- रिजल्ट ऊपर दिखाने के लिए -->
-        <h2>Structure Of Atom Quiz</h2>
+        <h2>Maths Quiz</h2>
         <div id="quiz"></div>
         <button id="startBtn" class="btn">क्विज शुरू करें</button>
         <button id="prevBtn" class="btn" style="display: none;">पिछला प्रश्न</button>
