--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ a:hover {
             <a href="quiz4.html">Quiz 4 - Hindi</a>
             <a href="quiz5.html">Quiz 5 - Maths</a>
             <a href="quiz6.html">Quiz 6 - Social Science</a>
+            <a href="rule.html">Rule !</a>
         </div>
     </div>
 
